# QuantKit

./: .gitignore  LICENSE  README.md  build.sh  configure.sh  run.sh
cmake/: CMakeCache.txt  Makefile  QuantKit  cmake_install.cmake
data/: Option_project.csv  linear_speed_csv_cash.csv  linear_speed_csv_inventory.csv  linear_speed_csv_optimal_speed.csv  linear_speed_csv_stock.csv  linear_speed_csv_value.csv
src/: CMakeLists.txt  FileManagement.cpp  FileManagement.h  HestonOption.cpp  HestonOption.h  OptimalExecution.cpp  OptimalExecution.h  Option.cpp  Option.h  Regression.cpp  Regression.h  Simulation.cpp  Simulation.h  main.cpp  nonuniform_grid.cpp  nonuniform_grid.h
